--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,14 +1,17 @@
-.header__flex{
-     display: flex;
-     justify-content: space-between;
-     height: 40px;
-     width: 90%;
-     margin: 0 auto;
-     .enlace{
-          text-transform: capitalize;
+.header{ 
+     background-color: $color_claro; 
+     .header__flex{
           display: flex;
-          align-items: center;
-          color: $color_primario;
-          font-size: 24px;
+          justify-content: space-between;
+          height: 40px;
+          width: 90%;
+          margin: 0 auto;
+          .enlace{
+               text-transform: capitalize;
+               display: flex;
+               align-items: center;
+               color: $color_primario;
+               font-size: 24px;
+          }
      }
 }
