--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,7 +5,9 @@
 }
 
 body {
+  font-size: 16px;
   font-family: "Source Sans Pro", sans-serif;
+  background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
 }
 
 a {
@@ -24,14 +26,17 @@ a {
   background-color: #0097a7;
 }
 
-.header__flex {
+.header {
+  background-color: white;
+}
+.header .header__flex {
   display: flex;
   justify-content: space-between;
   height: 40px;
   width: 90%;
   margin: 0 auto;
 }
-.header__flex .enlace {
+.header .header__flex .enlace {
   text-transform: capitalize;
   display: flex;
   align-items: center;
@@ -86,4 +91,59 @@ a {
 .caja_ubicacion .icono-ubicacion {
   color: #ffc107;
   font-size: 50px;
+}
+
+main {
+  width: 1200px;
+  max-width: 100%;
+  margin: 30px auto;
+  padding: 20px 40px;
+  background-color: white;
+  box-shadow: 0px 6px 6px -2px #000000;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+main .contenedor_servicios h2 {
+  text-align: center;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 700;
+}
+
+.servicios {
+  display: flex;
+  justify-content: space-between;
+}
+.servicios .cajaServicio {
+  padding: 15px 10px;
+  text-align: center;
+  flex: 0 0 calc(33.3% - 10px);
+}
+.servicios .cajaServicio h3 {
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 30px;
+  color: #0097a7;
+  margin-bottom: 15px;
+}
+.servicios .cajaServicio .iconos {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100px;
+  height: 100px;
+  margin: 0 auto 10px auto;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  background-color: #ffc107;
+}
+.servicios .cajaServicio .iconos i {
+  font-size: 40px;
+}
+.servicios .cajaServicio p {
+  line-height: 2;
 }
