--- a/pug/_plantilla_principal.pug
+++ b/pug/_plantilla_principal.pug
@@ -5,4 +5,5 @@ html(lang="es")
      body
           include _header.pug
           include _hero.pug
+          include _main.pug
           block contenido
