--- a/sass/_globales.scss
+++ b/sass/_globales.scss
@@ -13,6 +13,20 @@ $color_variado:#E6DADA;
      margin-bottom: 30px;
 }
 
+@mixin cajaSombra {
+     background-color: white;
+     box-shadow: 0px 6px 6px -2px #000000;
+     border-radius: 10px;
+     -webkit-border-radius: 10px;
+     -moz-border-radius: 10px;
+     -ms-border-radius: 10px;
+     -o-border-radius: 10px;
+}
+
+@mixin tamaño_flex_Caja($tamaño, $espacio) {
+     flex: 0 0 calc(#{$tamaño} - #{$espacio});
+}
+
 * {
      margin: 0;
      padding: 0;
@@ -20,7 +34,9 @@ $color_variado:#E6DADA;
 }
 
 body {
+     font-size: 16px;
      font-family: $fuente2;
+     background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
 }
 
 a {
