--- a/sass/_servicios.scss
+++ b/sass/_servicios.scss
@@ -34,6 +34,9 @@
           }
 
           p {
+               font-family: $fuente2;
+               font-weight: 500;
+               font-size: 18px;
                line-height: 2;
           }
      }
