--- a/sass/_globales.scss
+++ b/sass/_globales.scss
@@ -32,11 +32,22 @@ $color_variado:#E6DADA;
      padding: 0;
      box-sizing: border-box;
 }
-
+html{
+     font-size: 18px;
+     @include media('movil-s'){
+          font-size: 12px;
+     }
+     @include media('movil-l'){
+          font-size: 14px;
+     }
+     @include media('tablet'){
+          font-size: 16px;
+     }
+}
 body {
-     font-size: 16px;
      font-family: $fuente2;
      background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+     
 }
 
 a {
@@ -44,7 +55,7 @@ a {
 }
 
 .boton {
-     padding: 10px 50px;
+     padding: 0.625rem 3.125rem;
      display: inline-block;
      font-family: $fuente1;
 }
