--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -3,15 +3,24 @@
      .header__flex{
           display: flex;
           justify-content: space-between;
-          height: 40px;
+          height: 2.5rem;
           width: 90%;
           margin: 0 auto;
+          @include media('movil-s'){
+               display: block;
+               height: auto;
+               text-align: center;
+          }
           .enlace{
                text-transform: capitalize;
                display: flex;
                align-items: center;
                color: $color_primario;
-               font-size: 24px;
+               font-size: 1.5rem;
+               @include media('movil-s'){
+                    padding: 8px;
+                    justify-content: center;
+               }
           }
      }
 }
