--- a/sass/_servicios.scss
+++ b/sass/_servicios.scss
@@ -1,25 +1,33 @@
 .servicios {
      display: flex;
      justify-content: space-between;
-
+     @include media('movil-s'){
+          display: block;
+     }
      .cajaServicio {
           padding: 15px 10px;
           text-align: center;
           @include tamaño_flex_Caja(33.3%, 10px);
 
           h3 {
+               display: flex;
+               align-items: center;
+               justify-content: center;
                font-family: $fuente2;
-               font-size: 30px;
+               font-size: 1.875rem;
                color: $color_primario2;
                margin-bottom: 15px;
+               @include media('desktop'){
+                    height: 70px;
+               }
           }
 
           .iconos {
                display: flex;
                align-items: center;
                justify-content: space-evenly;
-               width: 100px;
-               height: 100px;
+               width: 6.25rem;
+               height: 6.25rem;
                margin: 0 auto 10px auto;
                border-radius: 50%;
                -webkit-border-radius: 50%;
@@ -29,14 +37,14 @@
                background-color: $color_secundario;
 
                i {
-                    font-size: 40px;
+                    font-size: 2.5rem;
                }
           }
 
           p {
                font-family: $fuente2;
                font-weight: 500;
-               font-size: 18px;
+               font-size: 1.125rem;
                line-height: 2;
           }
      }
