--- a/pug/_head.pug
+++ b/pug/_head.pug
@@ -2,6 +2,6 @@ head
      meta(charset="UTF-8")
      meta(name="viewport", content="width=device-width, initial-scale=1.0")
      title Flexbox
-     <script src="https://kit.fontawesome.com/42c004fb79.js" crossorigin="anonymous"></script>
+     script(src="https://kit.fontawesome.com/42c004fb79.js" crossorigin="anonymous")
      link(href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;1,300;1,400&family=Source+Sans+Pro:wght@300;500&display=swap" rel="stylesheet")
      link(rel="stylesheet", href="css/estilos.css")
