--- a/pug/_header.pug
+++ b/pug/_header.pug
@@ -1,4 +1,3 @@
 header.header
      .header__flex
-          each enlace in enlaces
-               a.enlace(href=""+enlace + '.html')=enlace
+          include _menu.pug
