--- a/pug/_plantilla_principal.pug
+++ b/pug/_plantilla_principal.pug
@@ -6,4 +6,5 @@ html(lang="es")
           include _header.pug
           include _hero.pug
           include _main.pug
+          script(src="script/script.js")
           block contenido
